# OTUS-Social-Network

./: Otus Social Network.postman_collection.json  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  pyproject.toml
backend/backend/: __init__.py  exceptions.py  settings.py
backend/backend/background/: feeds.py
backend/backend/dependencies/: cache.py  database.py  rabbitmq.py  security.py
backend/backend/handlers/: debug_cache.py  friend_delete.py  friend_set.py  login.py  post_create.py  post_feed.py  post_feed_posted.py  post_get.py  user_get.py  user_register.py  user_search.py
backend/backend/services/: feed.py
backend/scripts/: gen_1k_random_search_prefixes.py  gen_1kk_random_users.py  gen_random_user_in_loop.py
database/: docker-compose.yml  pgmigrate.Dockerfile
database/migrations/: V001__AddUsers.sql  V002__AddUsersSearchIndexes.sql  V004__AddAnotherReplicationSlot.sql  V005__AddFriends.sql  V006__AddPosts.sql  V007__AddCreatedToPosts.sql
jmeter/: hw3_read_only.jmx  prefixes.txt  user_ids.csv  user_search.jmx
